// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Row Polymorphism > open records 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_19;
  return v0;
}

function closure_20(record) {
  const v0 = record.x;
  return v0;
}

function closure_19(r) {
  const v0 = closure_20;
  return v0;
}
return main();
",
    "elaborated": "λ(r: Row) =>
  λ(record: Σ($sig: [ x: Num | r ]) . Schema [ x: Num | r ]) -> (record).x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"getX"}
[3] lambda {"variable":"r","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [17]
[4] lit {"value":{"type":"Atom","value":"Row"}}
[5] lambda {"variable":"record","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [15]
  :env -> [18]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [10]
[7] row:ext {"label":"x"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Schema"}}
[12] row:ext {"label":"x"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Atom","value":"Num"}}
[14] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[15] proj {"label":"x"}
  :target -> [16]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] env
[18] env
[19] closure
  :body -> [3]
  :env -> [17]
[20] closure
  :body -> [5]
  :env -> [18]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_19
      return v0
  fn closure_20(record) entry=entry
    entry:
      let v0 = read record.x
      return v0
  fn closure_19(r) entry=entry
    entry:
      let v0 = &closure_20
      return v0",
    "name": "getX",
    "normalized": "λ(r: Row) =>
  (closure: λ(record: Σ($sig: [ x: Num | r ]) . Schema [ x: Num | r ]) ->
    (record).x -| Γ: r)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(r: Row) => Π(t1: Σ($sig: [ x: Num | r ]) . Schema [ x: Num | r ]) -> Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getX;
  const v1 = "Num";
  const v2 = {
    y: v1
  };
  const v3 = v0(v2);
  const v4 = 10;
  const v5 = 20;
  const v6 = {
    x: v4,
    y: v5
  };
  const v7 = v3(v6);
  return v7;
}
return main();
",
    "elaborated": "getX @[ y: Num ] (Struct [ x: 10, y: 20 ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p1"}
[3] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getX"}
[6] var:ref {"name":"getX"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"y"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:empty
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Struct"}}
[12] row:ext {"label":"x"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Num","value":10}}
[14] row:ext {"label":"y"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"Num","value":20}}
[16] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getX
      let v1 = Num
      let v2 = alloc { y: v1 }
      let v3 = call *v0(v2)
      let v4 = 10
      let v5 = 20
      let v6 = alloc { x: v4, y: v5 }
      let v7 = call *v3(v6)
      return v7",
    "name": "p1",
    "normalized": "10",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getX;
  const v1 = "Num";
  const v2 = "Num";
  const v3 = {
    z: v1,
    y: v2
  };
  const v4 = v0(v3);
  const v5 = 5;
  const v6 = 7;
  const v7 = 3;
  const v8 = {
    x: v5,
    z: v6,
    y: v7
  };
  const v9 = v4(v8);
  return v9;
}
return main();
",
    "elaborated": "getX @[ z: Num, y: Num ] (Struct [ x: 5, z: 7, y: 3 ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p2"}
[3] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getX"}
[6] var:ref {"name":"getX"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"z"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:ext {"label":"y"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Struct"}}
[14] row:ext {"label":"x"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"Num","value":5}}
[16] row:ext {"label":"z"}
  :rest -> [18]
  :value -> [17]
[17] lit {"value":{"type":"Num","value":7}}
[18] row:ext {"label":"y"}
  :rest -> [20]
  :value -> [19]
[19] lit {"value":{"type":"Num","value":3}}
[20] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getX
      let v1 = Num
      let v2 = Num
      let v3 = alloc { z: v1, y: v2 }
      let v4 = call *v0(v3)
      let v5 = 5
      let v6 = 7
      let v7 = 3
      let v8 = alloc { x: v5, z: v6, y: v7 }
      let v9 = call *v4(v8)
      return v9",
    "name": "p2",
    "normalized": "5",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getX;
  const v1 = "String";
  const v2 = {
    name: v1
  };
  const v3 = v0(v2);
  const v4 = 100;
  const v5 = "point";
  const v6 = {
    x: v4,
    name: v5
  };
  const v7 = v3(v6);
  return v7;
}
return main();
",
    "elaborated": "getX @[ name: String ] (Struct [ x: 100, name: "point" ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p3"}
[3] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getX"}
[6] var:ref {"name":"getX"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"name"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"String"}}
[9] row:empty
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Struct"}}
[12] row:ext {"label":"x"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Num","value":100}}
[14] row:ext {"label":"name"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"String","value":"point"}}
[16] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getX
      let v1 = String
      let v2 = alloc { name: v1 }
      let v3 = call *v0(v2)
      let v4 = 100
      let v5 = "point"
      let v6 = alloc { x: v4, name: v5 }
      let v7 = call *v3(v6)
      return v7",
    "name": "p3",
    "normalized": "100",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Row Polymorphism > polymorphic extension 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_24;
  return v0;
}

function closure_25(rec) {
  const v0 = 0;
  const v1 = {
    ...rec,
    z: v0
  };
  return v1;
}

function closure_24(r) {
  const v0 = closure_25;
  return v0;
}
return main();
",
    "elaborated": "λ(r: Row) =>
  λ(rec: Σ($sig: [ y: Num, x: Num | r ]) . Schema [ y: Num, x: Num | r ]) ->
    { rec | z = 0 }",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"addZ"}
[3] lambda {"variable":"r","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [22]
[4] lit {"value":{"type":"Atom","value":"Row"}}
[5] lambda {"variable":"rec","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [19]
  :env -> [23]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [12]
[7] row:ext {"label":"y"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:ext {"label":"x"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"y"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"Atom","value":"Num"}}
[16] row:ext {"label":"x"}
  :rest -> [18]
  :value -> [17]
[17] lit {"value":{"type":"Atom","value":"Num"}}
[18] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[19] inj {"label":"z"}
  :target -> [21]
  :value -> [20]
[20] lit {"value":{"type":"Num","value":0}}
[21] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[22] env
[23] env
[24] closure
  :body -> [3]
  :env -> [22]
[25] closure
  :body -> [5]
  :env -> [23]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_24
      return v0
  fn closure_25(rec) entry=entry
    entry:
      let v0 = 0
      let v1 = update-immutable rec { z: v0 }
      return v1
  fn closure_24(r) entry=entry
    entry:
      let v0 = &closure_25
      return v0",
    "name": "addZ",
    "normalized": "λ(r: Row) =>
  (closure: λ(rec: Σ($sig: [ y: Num, x: Num | r ]) .
    Schema [ y: Num, x: Num | r ]) ->
    { rec | z = 0 } -| Γ: r)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(r: Row) =>
  Π(t1: Σ($sig: [ y: Num, x: Num | r ]) . Schema [ y: Num, x: Num | r ]) ->
    Σ($sig: [ z: Num, y: Num, x: Num | r ]) .
      Schema [ z: Num, y: Num, x: Num | r ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = addZ;
  const v1 = {};
  const v2 = v0(v1);
  const v3 = 2;
  const v4 = 1;
  const v5 = {
    y: v3,
    x: v4
  };
  const v6 = v2(v5);
  return v6;
}
return main();
",
    "elaborated": "addZ @[] (Struct [ y: 2, x: 1 ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p1"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"addZ"}
[6] var:ref {"name":"addZ"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:empty
[8] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [9]
[9] lit {"value":{"type":"Atom","value":"Struct"}}
[10] row:ext {"label":"y"}
  :rest -> [12]
  :value -> [11]
[11] lit {"value":{"type":"Num","value":2}}
[12] row:ext {"label":"x"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Num","value":1}}
[14] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = addZ
      let v1 = alloc {  }
      let v2 = call *v0(v1)
      let v3 = 2
      let v4 = 1
      let v5 = alloc { y: v3, x: v4 }
      let v6 = call *v2(v5)
      return v6",
    "name": "p1",
    "normalized": "Struct [ y: 2, x: 1, z: 0 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Σ($sig: [ z: Num, y: Num, x: Num | [] ]) .
  Schema [ z: Num, y: Num, x: Num | [] ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = addZ;
  const v1 = "String";
  const v2 = {
    color: v1
  };
  const v3 = v0(v2);
  const v4 = 10;
  const v5 = 5;
  const v6 = "red";
  const v7 = {
    y: v4,
    x: v5,
    color: v6
  };
  const v8 = v3(v7);
  return v8;
}
return main();
",
    "elaborated": "addZ @[ color: String ] (Struct [ y: 10, x: 5, color: "red" ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p2"}
[3] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"addZ"}
[6] var:ref {"name":"addZ"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"color"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"String"}}
[9] row:empty
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Struct"}}
[12] row:ext {"label":"y"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Num","value":10}}
[14] row:ext {"label":"x"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"Num","value":5}}
[16] row:ext {"label":"color"}
  :rest -> [18]
  :value -> [17]
[17] lit {"value":{"type":"String","value":"red"}}
[18] row:empty",
    "ivl": "",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = addZ
      let v1 = String
      let v2 = alloc { color: v1 }
      let v3 = call *v0(v2)
      let v4 = 10
      let v5 = 5
      let v6 = "red"
      let v7 = alloc { y: v4, x: v5, color: v6 }
      let v8 = call *v3(v7)
      return v8",
    "name": "p2",
    "normalized": "Struct [ y: 10, x: 5, color: "red", z: 0 ]",
    "solverTrace": "",
    "type": "Σ($sig: [ z: Num, y: Num, x: Num | [ color: String ] ]) .
  Schema [ z: Num, y: Num, x: Num | [ color: String ] ]",
    "validity": "",
  },
]
`;

exports[`Language Tour — Row Polymorphism > polymorphic projection 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_19;
  return v0;
}

function closure_20(obj) {
  const v0 = obj.name;
  return v0;
}

function closure_19(r) {
  const v0 = closure_20;
  return v0;
}
return main();
",
    "elaborated": "λ(r: Row) =>
  λ(obj: Σ($sig: [ name: String | r ]) . Schema [ name: String | r ]) ->
    (obj).name",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"getName"}
[3] lambda {"variable":"r","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [17]
[4] lit {"value":{"type":"Atom","value":"Row"}}
[5] lambda {"variable":"obj","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [15]
  :env -> [18]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [10]
[7] row:ext {"label":"name"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"String"}}
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Schema"}}
[12] row:ext {"label":"name"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Atom","value":"String"}}
[14] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[15] proj {"label":"name"}
  :target -> [16]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] env
[18] env
[19] closure
  :body -> [3]
  :env -> [17]
[20] closure
  :body -> [5]
  :env -> [18]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_19
      return v0
  fn closure_20(obj) entry=entry
    entry:
      let v0 = read obj.name
      return v0
  fn closure_19(r) entry=entry
    entry:
      let v0 = &closure_20
      return v0",
    "name": "getName",
    "normalized": "λ(r: Row) =>
  (closure: λ(obj: Σ($sig: [ name: String | r ]) .
    Schema [ name: String | r ]) ->
    (obj).name -| Γ: r)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(r: Row) =>
  Π(t1: Σ($sig: [ name: String | r ]) . Schema [ name: String | r ]) -> String",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "Alice";
  const v1 = 30;
  const v2 = {
    name: v0,
    age: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ name: "Alice", age: 30 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"person"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"name"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"String","value":"Alice"}}
[7] row:ext {"label":"age"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":30}}
[9] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = "Alice"
      let v1 = 30
      let v2 = alloc { name: v0, age: v1 }
      return v2",
    "name": "person",
    "normalized": "Struct [ name: "Alice", age: 30 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ name: String, age: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "1984";
  const v1 = "Orwell";
  const v2 = 328;
  const v3 = {
    name: v0,
    author: v1,
    pages: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Struct [ name: "1984", author: "Orwell", pages: 328 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"book"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"name"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"String","value":"1984"}}
[7] row:ext {"label":"author"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"String","value":"Orwell"}}
[9] row:ext {"label":"pages"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Num","value":328}}
[11] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = "1984"
      let v1 = "Orwell"
      let v2 = 328
      let v3 = alloc { name: v0, author: v1, pages: v2 }
      return v3",
    "name": "book",
    "normalized": "Struct [ name: "1984", author: "Orwell", pages: 328 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ name: String, author: String, pages: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getName;
  const v1 = "Num";
  const v2 = {
    age: v1
  };
  const v3 = v0(v2);
  const v4 = person;
  const v5 = v3(v4);
  return v5;
}
return main();
",
    "elaborated": "getName @[ age: Num ] person",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"n1"}
[3] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getName"}
[6] var:ref {"name":"getName"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"age"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:empty
[10] var:free {"name":"person"}
[11] var:ref {"name":"person"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getName
      let v1 = Num
      let v2 = alloc { age: v1 }
      let v3 = call *v0(v2)
      let v4 = person
      let v5 = call *v3(v4)
      return v5",
    "name": "n1",
    "normalized": ""Alice"",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getName;
  const v1 = "String";
  const v2 = "Num";
  const v3 = {
    author: v1,
    pages: v2
  };
  const v4 = v0(v3);
  const v5 = book;
  const v6 = v4(v5);
  return v6;
}
return main();
",
    "elaborated": "getName @[ author: String, pages: Num ] book",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"n2"}
[3] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getName"}
[6] var:ref {"name":"getName"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"author"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"String"}}
[9] row:ext {"label":"pages"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] row:empty
[12] var:free {"name":"book"}
[13] var:ref {"name":"book"}
  :refers_to -> [12]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getName
      let v1 = String
      let v2 = Num
      let v3 = alloc { author: v1, pages: v2 }
      let v4 = call *v0(v3)
      let v5 = book
      let v6 = call *v4(v5)
      return v6",
    "name": "n2",
    "normalized": ""1984"",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
    "validity": "valid",
  },
]
`;
